[gd_scene load_steps=18 format=2]

[ext_resource path="res://Resources/TileSet.tres" type="TileSet" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Map.gd" type="Script" id=4]
[ext_resource path="res://IMAGES/Tileset/Tileset2.png" type="Texture" id=5]
[ext_resource path="res://Scenes/UI.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Tileset.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 416, 208 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 40, 20 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 40, 20 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 40, 19.7813 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 40, 20 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="TileSet" id=4]
0/name = "Tileset2.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 96, 192, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 3 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 16, 32 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 16, 32 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 32, 16 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 32, 20 )

[node name="Map" type="Node2D"]
script = ExtResource( 4 )

[node name="Tileset" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 1
collision_layer = 5
collision_mask = 5
format = 1
tile_data = PoolIntArray( -655361, 46, 0, -720896, 46, 393218, -589840, 47, 0, -589839, 47, 0, -589838, 47, 0, -589837, 47, 0, -589836, 47, 0, -589835, 47, 0, -589834, 47, 0, -589833, 47, 0, -589832, 47, 0, -589831, 47, 0, -589830, 47, 0, -589829, 47, 0, -589828, 47, 0, -589827, 47, 0, -589826, 47, 0, -589825, 46, 65536, -655360, 46, 131076, -655359, 47, 0, -655358, 47, 0, -655357, 47, 0, -655356, 47, 0, -655355, 47, 0, -655354, 47, 0, -655353, 47, 0, -655352, 47, 0, -655351, 47, 0, -655350, 47, 0, -655349, 47, 0, -655348, 47, 0, -655347, 47, 0, -655346, 47, 0, -655345, 47, 0, -655344, 47, 0, -524304, 47, 0, -524303, 47, 0, -524302, 47, 0, -524301, 47, 0, -524300, 47, 0, -524299, 47, 0, -524298, 47, 0, -524297, 47, 0, -524296, 47, 0, -524295, 47, 0, -524294, 47, 0, -524293, 47, 0, -524292, 47, 0, -524291, 47, 0, -524290, 47, 0, -524289, 46, 131072, -589824, 46, 196612, -589823, 47, 0, -589822, 47, 0, -589821, 47, 0, -589820, 47, 0, -589819, 47, 0, -589818, 47, 0, -589817, 47, 0, -589816, 47, 0, -589815, 47, 0, -589814, 47, 0, -589813, 47, 0, -589812, 47, 0, -589811, 47, 0, -589810, 47, 0, -589809, 47, 0, -589808, 47, 0, -458768, 47, 0, -458767, 47, 0, -458766, 47, 0, -458765, 47, 0, -458764, 47, 0, -458763, 47, 0, -458762, 47, 0, -458761, 47, 0, -458760, 47, 0, -458759, 47, 0, -458758, 47, 0, -458757, 47, 0, -458756, 47, 0, -458755, 47, 0, -458754, 47, 0, -458753, 46, 196608, -524288, 46, 196612, -524287, 47, 0, -524286, 47, 0, -524285, 47, 0, -524284, 47, 0, -524283, 47, 0, -524282, 47, 0, -524281, 47, 0, -524280, 47, 0, -524279, 47, 0, -524278, 47, 0, -524277, 47, 0, -524276, 47, 0, -524275, 47, 0, -524274, 47, 0, -524273, 47, 0, -524272, 47, 0, -393232, 47, 0, -393231, 47, 0, -393230, 46, 393216, -393229, 46, 3, -393228, 46, 1, -393227, 46, 1, -393226, 46, 2, -393225, 46, 3, -393224, 46, 2, -393223, 46, 393217, -393222, 46, 3, -393221, 46, 1, -393220, 46, 2, -393219, 46, 3, -393218, 46, 393217, -393217, 46, 196613, -458752, 46, 65541, -458751, 46, 2, -458750, 46, 2, -458749, 46, 393217, -458748, 46, 2, -458747, 46, 1, -458746, 46, 3, -458745, 46, 393217, -458744, 46, 2, -458743, 46, 1, -458742, 46, 2, -458741, 46, 393217, -458740, 46, 4, -458739, 47, 0, -458738, 47, 0, -458737, 47, 0, -458736, 47, 0, -327696, 47, 0, -327695, 47, 0, -327694, 46, 65536, -327693, 46, 131074, -327692, 46, 131073, -327691, 46, 131073, -327690, 46, 65537, -327689, 46, 131075, -327688, 46, 65539, -327687, 46, 131075, -327686, 46, 196610, -327685, 46, 131074, -327684, 46, 65537, -327683, 46, 196611, -327682, 46, 196610, -327681, 46, 65538, -393216, 46, 196610, -393215, 46, 131074, -393214, 46, 65537, -393213, 46, 196610, -393212, 46, 196611, -393211, 46, 131073, -393210, 46, 196610, -393209, 46, 131075, -393208, 46, 65538, -393207, 46, 196609, -393206, 46, 65538, -393205, 46, 196609, -393204, 46, 65540, -393203, 47, 0, -393202, 47, 0, -393201, 47, 0, -393200, 47, 0, -262160, 47, 0, -262159, 47, 0, -262158, 46, 131072, -262157, 46, 65538, -262156, 46, 65537, -262155, 46, 196610, -262154, 46, 65539, -262153, 46, 196609, -262152, 46, 131073, -262151, 46, 131073, -262150, 46, 65537, -262149, 46, 196609, -262148, 46, 196609, -262147, 46, 65537, -262146, 46, 65539, -262145, 46, 196611, -327680, 46, 131073, -327679, 46, 65538, -327678, 46, 131073, -327677, 46, 196611, -327676, 46, 196611, -327675, 46, 65537, -327674, 46, 196611, -327673, 46, 196611, -327672, 46, 131074, -327671, 46, 131073, -327670, 46, 131075, -327669, 46, 131074, -327668, 46, 131076, -327667, 47, 0, -327666, 47, 0, -327665, 47, 0, -327664, 47, 0, -196624, 47, 0, -196623, 47, 0, -196622, 46, 196608, -196621, 46, 131073, -196620, 46, 131074, -196619, 46, 65539, -196618, 46, 131074, -196617, 46, 196609, -196616, 46, 196609, -196615, 46, 131074, -196614, 46, 196610, -196613, 46, 196611, -196612, 46, 65538, -196611, 46, 131075, -196610, 46, 65538, -196609, 46, 65537, -262144, 46, 65539, -262143, 46, 65539, -262142, 46, 131074, -262141, 46, 65537, -262140, 46, 131074, -262139, 46, 65538, -262138, 46, 65538, -262137, 46, 65539, -262136, 46, 65538, -262135, 46, 65537, -262134, 46, 196609, -262133, 46, 196611, -262132, 46, 196612, -262131, 47, 0, -262130, 47, 0, -262129, 47, 0, -262128, 47, 0, -131088, 47, 0, -131087, 47, 0, -131086, 46, 65536, -131085, 46, 65538, -131084, 46, 196610, -131083, 46, 196610, -131082, 46, 196610, -131081, 46, 196609, -131080, 46, 196609, -131079, 46, 65538, -131078, 46, 131073, -131077, 46, 131075, -131076, 46, 65539, -131075, 46, 196611, -131074, 46, 196611, -131073, 46, 65539, -196608, 46, 131075, -196607, 46, 65539, -196606, 46, 196611, -196605, 46, 131073, -196604, 46, 131074, -196603, 46, 65539, -196602, 46, 65537, -196601, 46, 196609, -196600, 46, 131074, -196599, 46, 131074, -196598, 46, 196609, -196597, 46, 131074, -196596, 46, 131076, -196595, 47, 0, -196594, 47, 0, -196593, 47, 0, -196592, 47, 0, -65552, 47, 0, -65551, 47, 0, -65550, 46, 196608, -65549, 46, 196609, -65548, 46, 131073, -65547, 46, 131073, -65546, 46, 131073, -65545, 46, 65539, -65544, 46, 65538, -65543, 46, 196610, -65542, 46, 196611, -65541, 46, 65539, -65540, 46, 196610, -65539, 46, 65537, -65538, 46, 196610, -65537, 46, 131075, -131072, 46, 131073, -131071, 46, 65537, -131070, 46, 131074, -131069, 46, 131074, -131068, 46, 196609, -131067, 46, 196611, -131066, 46, 196609, -131065, 46, 65538, -131064, 46, 65539, -131063, 46, 131075, -131062, 46, 65538, -131061, 46, 196611, -131060, 46, 131076, -131059, 47, 0, -131058, 47, 0, -131057, 47, 0, -131056, 47, 0, -17, 46, 0, -16, 46, 393217, -15, 46, 393217, -14, 46, 196613, -13, 46, 131073, -12, 46, 131075, -11, 46, 65538, -10, 46, 131075, -9, 46, 65538, -8, 46, 196610, -7, 46, 196611, -6, 46, 65537, -5, 46, 131074, -4, 46, 131074, -3, 46, 65537, -2, 46, 196610, -1, 46, 196611, -65536, 46, 131075, -65535, 46, 131073, -65534, 46, 65537, -65533, 46, 65537, -65532, 46, 196611, -65531, 46, 196611, -65530, 46, 131073, -65529, 46, 131074, -65528, 46, 65537, -65527, 46, 65539, -65526, 46, 65539, -65525, 46, 131073, -65524, 46, 65541, -65523, 46, 2, -65522, 46, 393217, -65521, 46, 1, -65520, 46, 4, 65519, 46, 262144, 65520, 46, 262146, 65521, 46, 458753, 65522, 46, 131077, 65523, 46, 196609, 65524, 46, 131073, 65525, 46, 65538, 65526, 46, 131075, 65527, 46, 131075, 65528, 46, 196610, 65529, 46, 131073, 65530, 46, 131073, 65531, 46, 196611, 65532, 46, 65539, 65533, 46, 131073, 65534, 46, 196611, 65535, 46, 65537, 0, 46, 65537, 1, 46, 131073, 2, 46, 65537, 3, 46, 131073, 4, 46, 196609, 5, 46, 131075, 6, 46, 131073, 7, 46, 65538, 8, 46, 196610, 9, 46, 131075, 10, 46, 196610, 11, 46, 131075, 12, 46, 5, 13, 46, 262146, 14, 46, 262147, 15, 46, 262146, 16, 46, 262148, 131056, 47, 0, 131057, 47, 0, 131058, 46, 131072, 131059, 46, 131075, 131060, 46, 65538, 131061, 46, 65539, 131062, 46, 196610, 131063, 46, 131074, 131064, 46, 65537, 131065, 46, 196610, 131066, 46, 65538, 131067, 46, 196610, 131068, 46, 196611, 131069, 46, 196611, 131070, 46, 196609, 131071, 46, 131075, 65536, 46, 65539, 65537, 46, 65537, 65538, 46, 196610, 65539, 46, 131075, 65540, 46, 131075, 65541, 46, 196611, 65542, 46, 65537, 65543, 46, 131073, 65544, 46, 65537, 65545, 46, 65538, 65546, 46, 131075, 65547, 46, 131075, 65548, 46, 65540, 65549, 47, 0, 65550, 47, 0, 65551, 47, 0, 65552, 47, 0, 65558, 43, 393216, 65559, 43, 4, 196592, 47, 0, 196593, 47, 0, 196594, 46, 131072, 196595, 46, 196609, 196596, 46, 196610, 196597, 46, 196610, 196598, 46, 65538, 196599, 46, 196610, 196600, 46, 65538, 196601, 46, 131075, 196602, 46, 196610, 196603, 46, 196609, 196604, 46, 196610, 196605, 46, 131073, 196606, 46, 196610, 196607, 46, 131073, 131072, 46, 131073, 131073, 46, 196610, 131074, 46, 131074, 131075, 46, 65537, 131076, 46, 131073, 131077, 46, 65537, 131078, 46, 131075, 131079, 46, 131075, 131080, 46, 65538, 131081, 46, 65538, 131082, 46, 65537, 131083, 46, 196609, 131084, 46, 65540, 131085, 47, 0, 131086, 47, 0, 131087, 47, 0, 131088, 47, 0, 131089, 43, 0, 131090, 43, 720899, 131091, 43, 131079, 131092, 43, 655365, 131093, 43, 7, 131094, 43, 655366, 131095, 43, 458754, 262128, 47, 0, 262129, 47, 0, 262130, 46, 131072, 262131, 46, 131074, 262132, 46, 65539, 262133, 46, 65537, 262134, 46, 65538, 262135, 46, 196609, 262136, 46, 65537, 262137, 46, 196610, 262138, 46, 196611, 262139, 46, 131073, 262140, 46, 196610, 262141, 46, 65538, 262142, 46, 65537, 262143, 46, 196611, 196608, 46, 196609, 196609, 46, 131073, 196610, 46, 65539, 196611, 46, 131074, 196612, 46, 65538, 196613, 46, 196611, 196614, 46, 131074, 196615, 46, 65537, 196616, 46, 65537, 196617, 46, 196610, 196618, 46, 65537, 196619, 46, 196609, 196620, 46, 196612, 196621, 47, 0, 196622, 47, 0, 196623, 47, 0, 196624, 47, 0, 196625, 43, 262144, 196626, 43, 524292, 196628, 43, 65542, 196630, 43, 65542, 327664, 47, 0, 327665, 47, 0, 327666, 46, 131072, 327667, 46, 65539, 327668, 46, 65538, 327669, 46, 131075, 327670, 46, 196611, 327671, 46, 196609, 327672, 46, 65537, 327673, 46, 65539, 327674, 46, 196610, 327675, 46, 196610, 327676, 46, 196609, 327677, 46, 65537, 327678, 46, 131074, 327679, 46, 65537, 262144, 46, 131075, 262145, 46, 65539, 262146, 46, 65538, 262147, 46, 65539, 262148, 46, 131073, 262149, 46, 196609, 262150, 46, 196610, 262151, 46, 196610, 262152, 46, 196611, 262153, 46, 65539, 262154, 46, 65539, 262155, 46, 65538, 262156, 46, 196612, 262157, 47, 0, 262158, 47, 0, 262159, 47, 0, 262160, 47, 0, 262162, 43, 524289, 262163, 43, 131079, 262164, 43, 851974, 262165, 43, 131079, 262166, 43, 524291, 393200, 47, 0, 393201, 47, 0, 393202, 46, 131072, 393203, 46, 131073, 393204, 46, 131074, 393205, 46, 131074, 393206, 46, 65539, 393207, 46, 65538, 393208, 46, 131073, 393209, 46, 196610, 393210, 46, 196609, 393211, 46, 65538, 393212, 46, 131075, 393213, 46, 65538, 393214, 46, 131073, 393215, 46, 196609, 327680, 46, 131073, 327681, 46, 131073, 327682, 46, 131073, 327683, 46, 65537, 327684, 46, 65538, 327685, 46, 196610, 327686, 46, 131073, 327687, 46, 65539, 327688, 46, 65537, 327689, 46, 196610, 327690, 46, 65539, 327691, 46, 65539, 327692, 46, 131076, 327693, 47, 0, 327694, 47, 0, 327695, 47, 0, 327696, 47, 0, 327698, 43, 393220, 327700, 43, 393220, 327702, 43, 65542, 458736, 47, 0, 458737, 47, 0, 458738, 46, 458752, 458739, 46, 262145, 458740, 46, 262147, 458741, 46, 262147, 458742, 46, 262145, 458743, 46, 262145, 458744, 46, 262146, 458745, 46, 262145, 458746, 46, 458753, 458747, 46, 458753, 458748, 46, 262146, 458749, 46, 262147, 458750, 46, 262146, 458751, 46, 131077, 393216, 46, 5, 393217, 46, 262145, 393218, 46, 262147, 393219, 46, 458753, 393220, 46, 458753, 393221, 46, 262146, 393222, 46, 458753, 393223, 46, 262147, 393224, 46, 262146, 393225, 46, 262145, 393226, 46, 458753, 393227, 46, 262146, 393228, 46, 458754, 393229, 47, 0, 393230, 47, 0, 393231, 47, 0, 393232, 47, 0, 393237, 43, 327680, 393238, 43, 393219, 524272, 47, 0, 524273, 47, 0, 524274, 47, 0, 524275, 47, 0, 524276, 47, 0, 524277, 47, 0, 524278, 47, 0, 524279, 47, 0, 524280, 47, 0, 524281, 47, 0, 524282, 47, 0, 524283, 47, 0, 524284, 47, 0, 524285, 47, 0, 524286, 47, 0, 524287, 46, 131072, 458752, 46, 196612, 458753, 47, 0, 458754, 47, 0, 458755, 47, 0, 458756, 47, 0, 458757, 47, 0, 458758, 47, 0, 458759, 47, 0, 458760, 47, 0, 458761, 47, 0, 458762, 47, 0, 458763, 47, 0, 458764, 47, 0, 458765, 47, 0, 458766, 47, 0, 458767, 47, 0, 458768, 47, 0, 458770, 43, 327682, 458772, 43, 327684, 458774, 43, 65542, 589808, 47, 0, 589809, 47, 0, 589810, 47, 0, 589811, 47, 0, 589812, 47, 0, 589813, 47, 0, 589814, 47, 0, 589815, 47, 0, 589816, 47, 0, 589817, 47, 0, 589818, 47, 0, 589819, 47, 0, 589820, 47, 0, 589821, 47, 0, 589822, 47, 0, 589823, 46, 196608, 524288, 46, 65540, 524289, 47, 0, 524290, 47, 0, 524291, 47, 0, 524292, 47, 0, 524293, 47, 0, 524294, 47, 0, 524295, 47, 0, 524296, 47, 0, 524297, 47, 0, 524298, 47, 0, 524299, 47, 0, 524300, 47, 0, 524301, 47, 0, 524302, 47, 0, 524303, 47, 0, 524304, 47, 0, 524308, 43, 131078, 524309, 43, 131079, 524310, 43, 458755, 655344, 47, 0, 655345, 47, 0, 655346, 47, 0, 655347, 47, 0, 655348, 47, 0, 655349, 47, 0, 655350, 47, 0, 655351, 47, 0, 655352, 47, 0, 655353, 47, 0, 655354, 47, 0, 655355, 47, 0, 655356, 47, 0, 655357, 47, 0, 655358, 47, 0, 655359, 46, 131072, 589824, 46, 65540, 589825, 47, 0, 589826, 47, 0, 589827, 47, 0, 589828, 47, 0, 589829, 47, 0, 589830, 47, 0, 589831, 47, 0, 589832, 47, 0, 589833, 47, 0, 589834, 47, 0, 589835, 47, 0, 589836, 47, 0, 589837, 47, 0, 589838, 47, 0, 589839, 47, 0, 589840, 47, 0, 589846, 43, 393220, 720895, 46, 262144, 655360, 46, 458754, 720918, 43, 327682, 786451, 43, 327680, 786452, 43, 7, 786453, 43, 327681 )

[node name="Tileset2" parent="." instance=ExtResource( 7 )]

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="UI" parent="Camera2D" instance=ExtResource( 6 )]

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -280 )
acc = 200.0
max_speed = 2000.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -16, 0 )
shape = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 0, -240 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, 4 )
shape = SubResource( 5 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2( 0, 240 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( 0, -4.00003 )
shape = SubResource( 6 )

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
position = Vector2( 432, 0 )
rotation = -1.5708
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D3"]
position = Vector2( 3.63798e-12, -4.21875 )
shape = SubResource( 7 )

[node name="StaticBody2D4" type="StaticBody2D" parent="."]
position = Vector2( -464, 0 )
rotation = -1.5708
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D4"]
position = Vector2( 0, 4.00003 )
shape = SubResource( 8 )

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
tile_set = SubResource( 4 )
cell_size = Vector2( 16, 16 )
collision_layer = 5
collision_mask = 5
format = 1

[node name="WestCheck" type="Area2D" parent="."]
position = Vector2( -524, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WestCheck"]
position = Vector2( -4, 0 )
shape = SubResource( 9 )

[node name="EastCheck" type="Area2D" parent="."]
position = Vector2( 528, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EastCheck"]
shape = SubResource( 10 )

[node name="NorthCheck" type="Area2D" parent="."]
position = Vector2( 0, -320 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="NorthCheck"]
position = Vector2( 0, 8 )
shape = SubResource( 11 )

[node name="SouthCheck" type="Area2D" parent="."]
position = Vector2( 0, 320 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SouthCheck"]
position = Vector2( 0, -4 )
shape = SubResource( 12 )

[connection signal="damage_taken" from="Player" to="." method="_on_Player_damage_taken"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="area_entered" from="WestCheck" to="." method="_on_WestCheck_area_entered"]
[connection signal="area_entered" from="EastCheck" to="." method="_on_EastCheck_area_entered"]
[connection signal="area_entered" from="NorthCheck" to="." method="_on_NorthCheck_area_entered"]
[connection signal="area_entered" from="SouthCheck" to="." method="_on_SouthCheck_area_entered"]
